--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ Thumbs.db
 Thumbs.db.meta
 
 # UnityVS
-# Mutton/Assets/Standard Assets/AssetStore/*
-# Mutton/Assets/UnityVS
+Mutton/Assets/Standard Assets/AssetStore*
+Mutton/Assets/UnityVS*
