--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ _ReSharper*/
 *.user
 *.userprefs
 *.suo
+*.DotSettings
 
 # OS generated files
 Thumbs.db
@@ -22,4 +23,5 @@ Thumbs.db.meta
 
 # UnityVS
 Mutton/Assets/Standard Assets/AssetStore*
+Mutton/Assets/Standard Assets/UnityVS*
 Mutton/Assets/UnityVS*
